--- a/shiny/environment_shinyapp.yml
+++ b/shiny/environment_shinyapp.yml
@@ -1,4 +1,4 @@
-name: magpie_forLovisa
+name: magpie_shinyapp
 channels:
   - defaults
 dependencies:
@@ -13,26 +13,55 @@ dependencies:
   - setuptools=75.1.0=py310hca03da5_0
   - sqlite=3.45.3=h80987f9_0
   - tk=8.6.14=h6ba3021_0
-  - tzdata=2024a=h04d1e81_0
   - wheel=0.44.0=py310hca03da5_0
   - xz=5.4.6=h80987f9_1
   - zlib=1.2.13=h18a0788_1
   - pip:
+      - anyio==4.6.0
+      - appdirs==1.4.4
       - asgiref==3.8.1
       - click==8.1.7
+      - contourpy==1.3.0
+      - cycler==0.12.1
+      - exceptiongroup==1.2.2
       - h11==0.14.0
       - htmltools==0.5.3
+      - idna==3.10
+      - imageio==2.35.1
+      - jinja2==3.1.4
+      - joblib==1.4.2
+      - kiwisolver==1.4.7
+      - lazy-loader==0.4
       - linkify-it-py==2.0.3
       - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - matplotlib==3.9.2
       - mdit-py-plugins==0.4.2
       - mdurl==0.1.2
+      - networkx==3.3
+      - numpy==1.26.4
+      - packaging==24.1
+      - pandas==2.2.3
+      - pillow==10.4.0
+      - prompt-toolkit==3.0.36
+      - pyparsing==3.1.4
+      - python-dateutil==2.9.0.post0
       - python-multipart==0.0.10
+      - pytz==2024.2
       - questionary==2.0.1
+      - scikit-learn==1.5.2
+      - scipy==1.14.1
       - shiny==1.1.0
+      - six==1.16.0
+      - sniffio==1.3.1
       - starlette==0.39.1
+      - threadpoolctl==3.5.0
+      - tifffile==2024.9.20
       - typing-extensions==4.12.2
+      - tzdata==2024.2
       - uc-micro-py==1.0.3
       - uvicorn==0.30.6
       - watchfiles==0.24.0
+      - wcwidth==0.2.13
       - websockets==13.1
-prefix: /Users/kxjl969/anaconda3/envs/magpie_forLovisa
+prefix: /Users/kxjl969/anaconda3/envs/magpie_shinyapp
