--- a/snakemake/magpie_environment.yml
+++ b/snakemake/magpie_environment.yml
@@ -29,12 +29,14 @@ dependencies:
       - htmltools==0.5.3
       - idna==3.10
       - imageio==2.35.1
+      - jinja2==3.1.4
       - joblib==1.4.2
       - kiwisolver==1.4.7
       - lazy-loader==0.4
       - linkify-it-py==2.0.3
       - llvmlite==0.43.0
       - markdown-it-py==3.0.0
+      - markupsafe==3.0.1
       - matplotlib==3.9.2
       - mdit-py-plugins==0.4.2
       - mdurl==0.1.2
