--- a/snakemake/magpie_environment.yml
+++ b/snakemake/magpie_environment.yml
@@ -54,6 +54,7 @@ dependencies:
       - python-multipart==0.0.12
       - pytz==2024.2
       - questionary==2.0.1
+      - scikit-image==0.24.0
       - scikit-learn==1.5.2
       - scipy==1.14.1
       - seaborn==0.13.2
