--- a/snakemake/magpie_environment.yml
+++ b/snakemake/magpie_environment.yml
@@ -33,6 +33,7 @@ dependencies:
       - joblib==1.4.2
       - kiwisolver==1.4.7
       - lazy-loader==0.4
+      - legacy-api-wrap==1.4
       - linkify-it-py==2.0.3
       - llvmlite==0.43.0
       - markdown-it-py==3.0.0
@@ -54,6 +55,7 @@ dependencies:
       - python-multipart==0.0.12
       - pytz==2024.2
       - questionary==2.0.1
+      - scanpy==1.9.4
       - scikit-image==0.24.0
       - scikit-learn==1.5.2
       - scipy==1.14.1
