Update Snakefile and env yml to be able to run in conda env

--- a/snakemake/Snakefile
+++ b/snakemake/Snakefile
@@ -3,6 +3,9 @@ rule all:
         expand("output/{sample}/spaceranger_meanIntensity/filtered_feature_bc_matrix.h5", sample=glob_wildcards("input/{sample}/msi").sample)
         
 rule perform_coreg:
+    message:
+        "Performing co-registration."
+    conda: 'magpie'
     input:
         "input/{sample}/msi/MSI_metadata.csv"
     output:
@@ -16,6 +19,9 @@ rule perform_coreg:
         "scripts/alter_data.py"
 
 rule make_spaceranger:
+    message:
+        "Creating spaceranger formatted output."
+    conda: 'magpie_environment.yml'
     input:
         "output/{sample}/transformed.csv",
         "output/{sample}/transformed.png"
@@ -27,6 +33,9 @@ rule make_spaceranger:
         "scripts/create_mock_spaceranger.py"
 
 rule create_barcode_matrix:
+    message:
+        "Generating aggregated data."
+    conda: 'magpie'
     input:
         "output/{sample}/spaceranger/filtered_feature_bc_matrix.h5"
     output:
