Add rotation option and inclusion/exclusion options for snakemake

--- a/snakemake/Snakefile
+++ b/snakemake/Snakefile
@@ -1,6 +1,22 @@
+include_barcode_matrix = False
+
+if os.path.isfile('input/selected.txt'):
+    file = open("input/selected.txt", "r")
+    samples = [line.rstrip() for line in file]
+else:
+    samples = glob_wildcards("input/{sample}/msi").sample
+if os.path.isfile('input/exclude.txt'):
+    file = open("input/exclude.txt", "r")
+    samples = list(set(samples).difference(set([line.rstrip() for line in file])))
+
+if include_barcode_matrix:
+    output_file = "spaceranger_meanIntensity"
+else:
+    output_file = "spaceranger"
+    
 rule all:
     input:
-        expand("output/{sample}/spaceranger_meanIntensity/filtered_feature_bc_matrix.h5", sample=glob_wildcards("input/{sample}/msi").sample)
+        expand("output/{sample}/"+output_file+"/filtered_feature_bc_matrix.h5", sample=samples)
         
 rule perform_coreg:
     input:
