Updated documentation with new abstract and new snakemake pipeline page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,3 +5,5 @@ author: "Lovisa Franzén"
 logo: "figures/magpie_logo.png"
 execute:
   execute_notebooks: "off"  # Disable automatic execution of notebooks during build
+parse:
+   myst_url_schemes: [mailto, http, https]
