--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,11 @@
 # Book settings
 title: "Magpie Pipeline Documentation"
 author: "Eleanor C. Williams"
-author: "Lovisa Franzén"
 logo: "figures/magpie_logo.png"
 execute:
   execute_notebooks: "off"  # Disable automatic execution of notebooks during build
 parse:
    myst_url_schemes: [mailto, http, https]
+sphinx:
+  config:
+    html_show_copyright: false
