--- a/magpie_environment.yml
+++ b/magpie_environment.yml
@@ -1,36 +1,54 @@
 name: magpie
 channels:
   - defaults
+  - conda-forge
 dependencies:
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2024.9.24=hca03da5_0
-  - libffi=3.4.4=hca03da5_1
-  - ncurses=6.4=h313beb8_0
-  - openssl=1.1.1w=h1a28f6b_0
-  - pip=24.2=py310hca03da5_0
-  - python=3.10.0=hbdb9e5c_5
-  - readline=8.2=h1a28f6b_0
-  - setuptools=75.1.0=py310hca03da5_0
-  - sqlite=3.45.3=h80987f9_0
-  - tk=8.6.14=h6ba3021_0
-  - wheel=0.44.0=py310hca03da5_0
-  - xz=5.4.6=h80987f9_1
-  - zlib=1.2.13=h18a0788_1
+  - bzip2
+  - ca-certificates
+  - libffi
+  - openssl
+  - pip
+  - python=3.10.13
+  - setuptools
+  - sqlite
+  - tk
+  - wheel
+  - xz
+  - zlib
   - pip:
+      - anndata==0.11.3
       - anyio==4.6.0
       - appdirs==1.4.4
+      - array-api-compat==1.11
       - asgiref==3.8.1
+      - attrs==25.1.0
+      - certifi==2025.1.31
+      - charset-normalizer==3.4.1
       - click==8.1.7
+      - colorama==0.4.6
+      - configargparse==1.7
+      - connection-pool==0.0.3
       - contourpy==1.3.0
       - cycler==0.12.1
+      - datrie==0.8.2
+      - docutils==0.21.2
+      - dpath==2.2.0
       - exceptiongroup==1.2.2
+      - fastjsonschema==2.21.1
+      - fonttools==4.56.0
+      - gitdb==4.0.12
+      - gitpython==3.1.44
       - h11==0.14.0
       - h5py==3.12.1
       - htmltools==0.5.3
+      - humanfriendly==10.0
       - idna==3.10
       - imageio==2.35.1
       - jinja2==3.1.4
       - joblib==1.4.2
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2024.10.1
+      - jupyter-core==5.7.2
       - kiwisolver==1.4.7
       - lazy-loader==0.4
       - legacy-api-wrap==1.4
@@ -41,6 +59,8 @@ dependencies:
       - matplotlib==3.9.2
       - mdit-py-plugins==0.4.2
       - mdurl==0.1.2
+      - natsort==8.4.0
+      - nbformat==5.10.4
       - networkx==3.3
       - numba==0.60.0
       - numpy==1.26.4
@@ -49,29 +69,54 @@ dependencies:
       - pathlib==1.0.1
       - patsy==0.5.6
       - pillow==10.4.0
+      - plac==1.4.3
+      - platformdirs==4.3.6
       - prompt-toolkit==3.0.36
+      - psutil==7.0.0
+      - pulp==2.5.1  # Ensure this is installed for both platforms
+      - pynndescent==0.5.13
       - pyparsing==3.1.4
+      - pyreadline3==3.5.4
       - python-dateutil==2.9.0.post0
       - python-multipart==0.0.12
       - pytz==2024.2
+      - pyyaml==6.0.2
       - questionary==2.0.1
+      - referencing==0.36.2
+      - requests==2.32.3
+      - reretry==0.11.8
+      - rpds-py==0.23.1
       - scanpy==1.9.4
       - scikit-image==0.24.0
       - scikit-learn==1.5.2
       - scipy==1.14.1
       - seaborn==0.13.2
+      - session-info==1.0.0
       - shiny==1.1.0
       - six==1.16.0
+      - smart-open==7.1.0
+      - smmap==5.0.2
+      - snakemake==7.32.4
       - sniffio==1.3.1
       - starlette==0.39.2
       - statsmodels==0.14.4
+      - stdlib-list==0.11.1
+      - stopit==1.1.2
+      - tabulate==0.9.0
       - threadpoolctl==3.5.0
+      - throttler==1.2.2
       - tifffile==2024.9.20
+      - toposort==1.10
       - tqdm==4.66.5
+      - traitlets==5.14.3
       - typing-extensions==4.12.2
       - tzdata==2024.2
       - uc-micro-py==1.0.3
+      - umap-learn==0.5.7
+      - urllib3==2.3.0
       - uvicorn==0.31.0
       - watchfiles==0.24.0
       - wcwidth==0.2.13
       - websockets==13.1
+      - wrapt==1.17.2
+      - yte==1.7.0
